--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="c088dbf4c64470af6618d1f5d69d675e0ea4287e" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
