--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.20.1'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 repositories {
-    mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
 }
 
