--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     repositories {
-        mavenCentral()
-        jcenter()
+        maven { url 'http://repo1.maven.org/maven2' }
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.20.1'
+        classpath 'io.fabric.tools:gradle:1.3.9'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 repositories {
+    maven { url 'http://repo1.maven.org/maven2' }
     maven { url 'https://maven.fabric.io/public' }
 }
 
