Changed applicationId to edu.gcc.whiletrue.pingit and updated all activity xml files and gradle build file and androidManifest

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "edu.whiletrue.pingit"
+        applicationId "edu.gcc.whiletrue.pingit"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
