--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.whiletrue.pingit">
+    package="edu.gcc.whiletrue.pingit">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="edu.whiletrue.pingit.MainApplication">
+        android:name="edu.gcc.whiletrue.pingit.MainApplication">
         <activity
-            android:name="edu.whiletrue.pingit.MainActivity"
+            android:name="edu.gcc.whiletrue.pingit.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
