--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.gcc.whiletrue.pingit">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" /><!--Fabric-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /><!--Parse-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><!--Leak Canary-->
 
     <application
         android:name=".MainApplication"
@@ -48,8 +49,10 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/titleActivitySettings"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="edu.gcc.whiletrue.pingit.HomeActivity">
+        </activity>
     </application>
 
 </manifest>
