--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,18 @@
     <uses-permission android:name="android.permission.INTERNET" /><!--Fabric-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /><!--Parse-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><!--Leak Canary-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!--
+      IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
+      to match your app's package name + ".permission.C2D_MESSAGE".
+    -->
+    <permission android:protectionLevel="signature"
+        android:name="edu.gcc.whiletrue.pingit.permission.C2D_MESSAGE" />
+    <uses-permission android:name="edu.gcc.whiletrue.pingit.permission.C2D_MESSAGE" />
 
     <application
         android:name=".MainApplication"
@@ -55,6 +67,28 @@
             android:screenOrientation="portrait"
             android:parentActivityName="edu.gcc.whiletrue.pingit.HomeActivity">
         </activity>
+
+        <service android:name="com.parse.PushService" />
+        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <!--
+                  IMPORTANT: Change "com.parse.starter" to match your app's package name.
+                -->
+                <category android:name="edu.gcc.whiletrue.pingit" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
