--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,16 +43,15 @@
             android:label="@string/titleActivityHome"
             android:parentActivityName=".StartupActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".StartupActivity" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustNothing">
         </activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/titleActivitySettings"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustNothing"
             android:parentActivityName="edu.gcc.whiletrue.pingit.HomeActivity">
         </activity>
     </application>
