Minor change to manifest for software keyboard. Also migrated all strings in Preferences xml to the strings file and updated the tests accordingly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,15 +43,13 @@
             android:label="@string/titleActivityHome"
             android:parentActivityName=".StartupActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustNothing">
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/titleActivitySettings"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustNothing"
             android:parentActivityName="edu.gcc.whiletrue.pingit.HomeActivity">
         </activity>
     </application>
