--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" /><!--Fabric-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /><!--Parse-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><!--Leak Canary-->
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!--sendbird-->
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -54,6 +54,32 @@
             android:screenOrientation="portrait"
             android:parentActivityName="edu.gcc.whiletrue.pingit.HomeActivity">
         </activity>
+
+        <activity
+            android:name=".SendBirdChatActivity"
+            android:label="SendBird"
+            android:configChanges="orientation|screenSize"
+            >
+        </activity>
+        <activity
+            android:name=".SendBirdMessagingActivity"
+            android:label="SendBird"
+            android:configChanges="orientation|screenSize"
+            >
+        </activity>
+
+        <!-- Required to run Sample project-->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
