--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://raw.githubusercontent.com/smilefam/SendBird-SDK-Android/master/" }
 }
 
 android {
@@ -31,6 +32,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions{
+        //prevents SendBird from crashing the linter
+        disable 'InvalidPackage'
     }
 }
 
@@ -52,6 +57,9 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
 
+    //SendBird
+    compile 'com.sendbird.sdk:sendbird-android-sdk:2.0.6'
+
     //UNIT TESTING AND & INSTRUMENTED TESTING
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
@@ -66,11 +74,4 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     // Optional -- UI testing with UI Automator
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
-}
-
-repositories {
-    maven { url "https://raw.githubusercontent.com/smilefam/SendBird-SDK-Android/master/" }
-}
-dependencies {
-    compile 'com.sendbird.sdk:sendbird-android-sdk:2.0.6'
 }
