Changed the summary text for the notification resend delay switch and forced Chat to be in portrait. Have dialogue launching when a user enters a blank name in Settings, preventing the summary from changing, but need to prevent the actual setting from changing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,12 +65,14 @@
         <activity
             android:name=".SendBirdChatActivity"
             android:label="SendBird"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
             >
         </activity>
         <activity
             android:name=".SendBirdMessagingActivity"
             android:label="SendBird"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
             >
         </activity>
